--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+body{
+  background-color: skyblue;
+}
 h1{
   color: darkblue;
+  font-size: 75px;
+  text-align: center;
+
 }
+h2{
+  color: darkblue;
+  font-size: 50px;
+  text-align: center;
+}
+p{
+  font-size: 25px;
+  text-align: center;
+}
+a{
+  display:flex;
+  font-size: 25px;
+  text-align: center;
+  justify-content:space-evenly;
+  text-decoration: none;
+  font-weight: bold;
+  }
+  a:hover{
+    text-decoration: underline;
+    color: blue;
+  }
+  img{
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+  }
