--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
 h1{
-  color: darkblue;
+  color: darkgreen;
+}body{
+  background-color: lightgreen;
 }
+h1{
+  color: darkgreen;
+  font-size: 75px;
+  text-align: center;
+
+}
+h2{
+  color: darkgreen;
+  font-size: 50px;
+  text-align: center;
+}
+p{
+  font-size: 25px;
+  text-align: center;
+}
+a{
+  display:flex;
+  font-size: 25px;
+  text-align: center;
+  justify-content:space-evenly;
+  text-decoration: none;
+  font-weight: bold;
+  color: darkgreen;
+  }
+  a:hover{
+    text-decoration: underline;
+    color: yellowgreen;
+  }
+  img{
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+  }
