--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,42 @@
-body{
+body {
   background-color: skyblue;
 }
-h1{
+h1 {
   color: darkblue;
   font-size: 75px;
   text-align: center;
-
 }
-h2{
+h2 {
   color: darkblue;
   font-size: 50px;
   text-align: center;
 }
-p{
+p {
   font-size: 25px;
   text-align: center;
 }
-a{
-  display:flex;
+a {
+  display: flex;
   font-size: 25px;
   text-align: center;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   text-decoration: none;
   font-weight: bold;
   }
-  a:hover{
+a:hover {
     text-decoration: underline;
     color: blue;
   }
-  img{
+img {
     height: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-
   }
-  li{
+li {
     font-size: 25px;
-    display:table;
-    margin:0px auto 0px auto;;
+    display: table;
+    margin: 0px auto 0px auto;
   }
   
