--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,45 @@ li {
     margin: 0px auto 0px auto;
   }
   
+/* Fire Island Styles */
+
+.fire {
+  background-color: rgb(80, 24, 24);
+  color: white;
+  text-align: center;
+}
+
+.fire-main-content img {
+  width: 50vw;
+  height: auto;
+}
+
+.fire h2 {
+  color: white;
+}
+.gradient-text, .fireLink {
+  /* Fallback: Set a background color. */
+  background-color: sandybrown;
+    
+  /* Create the gradient. */
+  background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
+
+  /* Set the background size and repeat properties. */
+  background-size: 100%;
+  background-repeat: repeat;
+
+  /* Use the text as a mask for the background. */
+  /* This will show the gradient as a text color rather than element bg. */
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+
+.fireLink:hover {
+  text-decoration: underline;
+  text-decoration-color: #f53803;
+  font-weight: bolder;
+  font-size: 130%;
+}
